[package]
name = "backpack"
version = "0.1.0"
authors = ["Riku <riku@kawaii.sh>"]
edition = "2018"

[dependencies]
tokio = { version = "1.10.0", features = ["full"] }
sqlx = { version = "0.5.1", features = [ "runtime-actix-native-tls", "postgres", "chrono" ] }
sea-orm = { version = "0.6.0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros" ], default-features = false }
clap = { version = "3.1.0", features = ["derive"] }
serde = "1.0.126"
serde_json = { version = "1.0.64", features = [ "preserve_order" ] }
serde_with = "1.4.0"
jsonwebtoken = { git = "https://github.com/Riku32/jsonwebtoken" }
dotenv = "0.15.0"
# Router does not work after actix-http beta 10, need to force version 9 for http and version 8 for web
actix-web = "=4.0.0-beta.8"
actix-http = "=3.0.0-beta.9"
actix-files = "0.6.0-beta.6"
actix-multipart = "0.4.0-beta.5"
httparse = "=1.4.1"
figlet-rs = "0.1.3"
indicatif = "0.16.2"
colored = "2.0.0"
derive_more = "0.99.17"
argon2 = { version = "0.3.3", features = ["std"] }
rusoto_s3 = "0.47.0"
rusoto_core = "0.47.0"
image = "0.24.0"
anyhow = "1.0.53"
log = "0.4.14"
infer = "0.3.4"
rand = "0.8.3"
futures = "0.3.12"
time = "0.2.25"
chrono = "0.4"
async-trait = "0.1.42"
env_logger = "0.8.3"
regex = "1"
lettre = { version = "0.10.0-rc.3", features = [ "tokio1-native-tls" ] }
thiserror = "1.0"
lazy_static = "1.4.0"
nanoid = "0.4.0"
sha2 = "0.10"
bytes = "1.1.0"